--- a/views/register.jade
+++ b/views/register.jade
@@ -4,21 +4,41 @@ block body
     h1 Create your own Make Play Live Account
     script
       function validateForm() {
-        /*if (!$('#password').val().length < 8) {
-            console.log("adsdsaadsdsa");
-            $('#password').attr('placeholder', 'Your password must be at least 8 digits.')
+        var validEmail = /^[A-z]+([A-z0-9]+[\.\_]?[A-z0-9]+)*@[A-z0-9]{2,}(\.[A-z0-9]{2,}){1,3}[A-z]$/;
+
+        if ($('#password1').val() !== $('#password2').val()) {
+            $('#password1').attr('placeholder', 'Your passwords does not match.');
+            $('#password2').attr('placeholder', 'Your passwords does not match.');
+            $('#field-control').addClass('error');
+            $('#help-password').text('Your passwords does not match');
             return false;
-        }*/
+        } else if ($('#password1').val().length < 8 || $('#password2').val() < 8 ) {
+            $('#password1').attr('placeholder', 'Your password must be at least 8 digits.');
+            $('#password2').attr('placeholder', 'Your password must be at least 8 digits.');
+            $('#field-control').addClass('error');
+            $('#help-password').text('Your password must be at least 8 digits');
+            return false;
+        } else if (!validEmail.test($('#email').val())) {
+            $('#email').attr('placeholder', 'Your email address is not valid.');
+            $('#field-control').addClass('error');
+            $('#help-email').text('Your Email Address is not valid');
+            return false;
+        }
       }
-    form.well(method='POST', id='register', onsubmit='return validateForm();')
+
+    form.well(method='POST', id='login', onsubmit='return validateForm();')
       fieldset.control-group(id='field-control')
+        span.help-block(id='help-password')
+        span.help-block(id='help-email')
         .input
           input.xlarge(type='text', placeholder='Enter your Firstname', name='firstname', required)
         .input
           input.xlarge(type='text', placeholder='Enter your Lastname', name='lastname', required)
         .input
-          input.xlarge(type='text', placeholder='Enter your Email Adress', name='email', required)
+          input.xlarge(type='text', placeholder='Enter your Email Adress', name='email', id='email', required)
         .input
-          input.xlarge(type='password', placeholder='Enter your Password', name='password', id='password' , required)
+          input.xlarge(type='password', placeholder='Enter your Password', name='password1', id='password1' , required)
+        .input
+          input.xlarge(type='password', placeholder='Retype your Password', name='password2', id='password2' , required)
         .action
           input.btn-primary(type='submit',id='loginButton', value='Create My New Account!')
