Replace the MakePlayLive with a more generic name. Look at the config.json

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 extends layout
 block body
   .title
-    h1 Login with your Make Play Live Account
+    h1 Login with your #{network} Account
     form.well(method='POST', id='login', onsubmit='return validateForm();')
       fieldset.control-group(id='field-control')
         .input
