--- a/views/register.jade
+++ b/views/register.jade
@@ -1,7 +1,7 @@
 extends layout
 block body
   .title
-    h1 Create your own Make Play Live Account
+    h1 Create your own #{network} Account
     script
       function validateForm() {
         var validEmail = /^[A-z]+([A-z0-9]+[\.\_]?[A-z0-9]+)*@[A-z0-9]{2,}(\.[A-z0-9]{2,}){1,3}[A-z]$/;
