Replace the rest of the MakePlayLive and fix the format of the *.jade files.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,8 @@
 doctype 5
 html
   head
-    title Bodega Make Play Live Addons Store
     link(rel="stylesheet", href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css")
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
+    block head
   body
     block body
