--- a/views/registerconfirm.jade
+++ b/views/registerconfirm.jade
@@ -1,10 +1,8 @@
 extend layout
+block head
+    title Registration Confirm
 block body
     .page-header
-      //TODO
-      //* remove all the bodega and MakePlayLive from the ui.
-      //put them in config jade and take them with app.config.appname for
-      //bodega and app.config.network for MakePlayLive
-      h1 Bodega MakePlayLive Addon Store
+      h1(align="center") Bodega #{network} Addon Store
       .alert.alert-success.information
         | A verification code has been send to your email account
