--- a/views/register.jade
+++ b/views/register.jade
@@ -1,7 +1,9 @@
 extends layout
+block head
+  title Create your own #{network} Account
 block body
   .title
-    h1 Create your own #{network} Account
+    h1(align="center") Create your own #{network} Account
     script
       function validateForm() {
         var validEmail = /^[A-z]+([A-z0-9]+[\.\_]?[A-z0-9]+)*@[A-z0-9]{2,}(\.[A-z0-9]{2,}){1,3}[A-z]$/;
