--- a/views/accountmodify.jade
+++ b/views/accountmodify.jade
@@ -22,32 +22,37 @@ block body
        }
       }
 
-    form.well(method='POST', id='modifyAccount')
+    form.form-horizontal.well(method='POST', id='modifyAccount')
       fieldset.control-group(id='field-control')
-        .input
-          .label.badge-info Name
-          input.xlarge(type='text', value='#{firstname}', name='firstname')
-        .input
-          .label.badge-info Last name
-          input.xlarge(type='text', value='#{lastname}', name='lastname')
-        .input
-          .label.badge-info Email
-          input.xlarge(type='text',  value='#{email}', name='email')
-        .input
-        .action
+        .control-group
+          label.control-label(for='firstname') Name
+          .controls
+            input.xlarge(type='text', value='#{firstname}', name='firstname')
+        .control-group
+          label.control-label(for='lastname') Last name
+          .controls
+            input.xlarge(type='text', value='#{lastname}', name='lastname')
+        .control-group
+          label.control-label(for='email') Email
+          .controls
+            input.xlarge(type='text',  value='#{email}', name='email')
+        .control-group
+        .controls
           input.btn-primary(type='submit',id='updateAccount', value='Update Account')
 
-    form.well(method='POST', id='modifyPassword', onsubmit='return validateForm();')
+    form.form-horizontal.well(method='POST', id='modifyPassword', onsubmit='return validateForm();')
       fieldset.control-group(id='field-control2')
         span.help-control(id='help-password')
-        .input
-          .label.badge-info New Password
-          input.xlarge(type='password', placeholder='Type your new password', name='password1', id='password1')
-        .input
-          .label.badge-info Confirm Password
-          input.xlarge(type='password', placeholder='Retype your password', name='password2', id='password2')
-        .input
-        .action
+        .control-group
+          label.control-label(for='password1') New Password
+          .controls
+            input.xlarge(type='password', placeholder='Type your new password', name='password1', id='password1')
+        .control-group
+          label.control-label(for='password2') Confirm Password
+          .controls
+            input.xlarge(type='password', placeholder='Retype your password', name='password2', id='password2')
+        .control-group
+        .controls
           input.btn-primary(type='submit',id='updatePassword', value='Update Password')
 
 
