--- a/views/loginconfirm.jade
+++ b/views/loginconfirm.jade
@@ -1,6 +1,12 @@
 extend layout
 block head
     title Login confirmation
+    script
+      $(document).ready(function() {
+        window.setTimeout(function() {
+          window.location = '/';
+        }, 2000);
+      });
 block body
     .page-header
       h1(align="center") Bodega #{network} Addon Store
