--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,8 @@ doctype 5
 html
   head
     link(rel="stylesheet", href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css")
-    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js')
+    script(text="text/javascript", src="http://cdn.sockjs.org/sockjs-0.3.min.js")
     block head
   body
     block body
