Create index/test and populate it with data. This is our test index. This content it will be moved to the /index when it will be ready

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype 5
 html
   head
+    script(src="http://code.jquery.com/jquery.js")
     link(rel="stylesheet", href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css")
-    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js')
+    script(src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js")
     script(text="text/javascript", src="http://cdn.sockjs.org/sockjs-0.3.min.js")
     block head
   body
