Add the subcategories to the index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,19 +19,16 @@ block head
     });
 block body
 
-  button(type="button", onclick='return do1();')
   .container-fluid
     .row-fluid
-      .span1
+      .span2
         ul.nav.nav-tabs.nav-pills.nav-stacked
           for category in categories
             li.dropdown
-              a.dropdown-toggle(data-toogle='dropdown', href='#') #{category.name}
+              a.dropdown-toggle(data-toggle='dropdown', href='#') #{category.name}
                 b.caret
-              //ul.dropdown
-                //for subCategory in categories.subcategories
-                  //li
-                    //a(href='#') subCategory.name
-  for category in categories
-    -console.log(category)
-    p #{category.name}
+              ul.dropdown-menu
+                for subCategory in category.subcategories
+                  li
+                    a(href="#") #{subCategory.name}
+      .span10
