--- a/views/indextest.jade
+++ b/views/indextest.jade
@@ -13,28 +13,55 @@ block body
       .row-fluid
         .span1
           ul.nav.nav-tabs.nav-pills.nav-stacked
-            each currentChannel, iterator in channel
-                //each channelValue in channel[iterator].name
                 li.dropdown
-                  a.dropdown-toggle(data-toggle='dropdown', href='#') #{currentChannel.name}
+                  a.dropdown-toggle(data-toggle='dropdown', href='#') channel
                     b.caret
-                  if (currentChannel.cat)
                     ul.dropdown-menu
-                      each category, categoryId in currentChannel.cat
                         li
-                          a(href="#") #{category.name}
+                          a(href="#") category.name
         .span11
-          each currentChannel, channelIterator in channel
-            if (currentChannel.assets)
-              each asset, assetIterator in currentChannel.assets
-                if (((assetIterator) % 3) === 0)
-                  .row-fluid.show-grid
-                  h1 #{assetIterator}
-                .span4
-                  .thumbnails
-                  .span4
-                    img(src="http://#{asset.image}", alt="")
-                    h1 #{asset.name}
-                    p Author Name: #{asset.author}
-                    p Descriptiong: #{asset.description}
-                    p License: #{asset.license}
+          .row-fluid.show-grid
+              ul.thumbnails
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.license
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.license
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.license
+          .row-fluid.show-grid
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.License
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.license
+                li.span4
+                  .thumbnail
+                    img(src="", alt="")
+                    h1 asset.name
+                    p Author Name: asset.author
+                    p Descriptiong: asset.description
+                    p License: asset.License
